Fix jumping when loading new data

--- a/cws-ui/src/main/webapp/css/logs.css
+++ b/cws-ui/src/main/webapp/css/logs.css
@@ -38,6 +38,9 @@
     word-wrap: break-word;
     word-break: break-all;
     font-family: courier, consolas;
+    height: 50px;
+    overflow-y: auto;
+    margin-bottom: 0px !important;
     /*white-space: normal !important;*/
 }
 
